# rust-chip8

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: buzzer.rs  chip8.rs  display.rs  keyboard.rs  main.rs  memory.rs
